--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Fancy Pink-Teal Gallery</title>
+  <title>Seh3</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
